@@ -511,48 +511,79 @@ MAYDAYPAGE;
 				$lockFileFound = true;
 			}
 		}
-		
-		$textPart = 'This is an automatic email from TYPO3. Don\'t answer!'."\n\n"; 
-		$htmlPart = '<strong>This is an automatic email from TYPO3. Don\'t answer!</strong>';
+
+		$textPart = self::getErrorMailText($e,$actionName);
+		$htmlPart = self::getErrorMailHtml($e,$actionName);
+
+		/* @var $mail tx_rnbase_util_Mail */
+		$mail = tx_rnbase::makeInstance('tx_rnbase_util_Mail');
+		$mail->setSubject('Exception on site '.$GLOBALS['TYPO3_CONF_VARS']['SYS']['sitename']);
+		$mail->setFrom(tx_rnbase_configurations::getExtensionCfgValue('rn_base', 'fromEmail'));
+		$mail->setTextPart($textPart);
+		$mail->setHtmlPart($htmlPart);
+
+		if($lockFileFound && !$ignoreMailLock)
+			file_put_contents($lockFile, time()); // refresh lock
+		return $mail->send($mailAddr);
+	}
+	protected static function getErrorMailText($e,$actionName) {
+		$textPart = 'This is an automatic email from TYPO3. Don\'t answer!'."\n\n";
 		$textPart .= 'UNCAUGHT EXCEPTION FOR VIEW: ' . $actionName ."\n\n";
-		$htmlPart .= '<div><strong>UNCAUGHT EXCEPTION FOR VIEW: ' . $actionName .'</strong></div>';
 		$textPart .= 'Message: ' . $e->getMessage()."\n\n";
-		$htmlPart .= '<p><strong>Message:</strong><br />' . $e->getMessage() . '</p>';
 		$textPart .= "Stacktrace:\n". $e->__toString()."\n";
-		$htmlPart .= '<p><strong>Stacktrace:</strong><pre>'.$e->__toString().'</pre></p>';
 		$textPart .= 'SITE_URL: ' . t3lib_div::getIndpEnv('TYPO3_SITE_URL')."\n";
+	
+		tx_rnbase::load('tx_rnbase_util_TYPO3');
+		$textPart .= 'BE_USER: '.tx_rnbase_util_TYPO3::getBEUserUID()."\n";
+		$textPart .= 'FE_USER: '.tx_rnbase_util_TYPO3::getFEUserUID()."\n";
+	
+		return $textPart;
+	}
+	
+	protected static function getErrorMailHtml($e,$actionName) {
+		$htmlPart = '<strong>This is an automatic email from TYPO3. Don\'t answer!</strong>';
+		$htmlPart .= '<div><strong>UNCAUGHT EXCEPTION FOR VIEW: ' . $actionName .'</strong></div>';
+		$htmlPart .= '<p><strong>Message:</strong><br />' . $e->getMessage() . '</p>';
+		$htmlPart .= '<p><strong>Stacktrace:</strong><pre>'.$e->__toString().'</pre></p>';
 		$htmlPart .= '<p><strong>SITE_URL</strong><br />'. t3lib_div::getIndpEnv('TYPO3_SITE_URL'). '</p>';
-		if(count($_GET))
-			$htmlPart .= '<p><strong>_GET</strong><br />'. var_export($_GET, true). '</p>';
-		if(count($_POST))
-			$htmlPart .= '<p><strong>_POST</strong><br />'. var_export($_POST, true). '</p>';
-		$htmlPart .= '<p><strong>_SERVER</strong><br />'. var_export($_SERVER, true). '</p>';
+	
+		$get = self::removePasswordParams($_GET);
+		if(count($get))
+			$htmlPart .= '<p><strong>_GET</strong><br />'. var_export($get, true). '</p>';
+	
+		$post = self::removePasswordParams($_POST);
+		if(count($post))
+			$htmlPart .= '<p><strong>_POST</strong><br />'. var_export($post, true). '</p>';
+	
+		$cookie = self::removePasswordParams($_COOKIE);
+		if(count($cookie))
+			$htmlPart .= '<p><strong>_COOKIE</strong><br />'. var_export($cookie, true). '</p>';
+	
+		$htmlPart .= '<p><strong>_SERVER</strong><br />'. var_export(self::removePasswordParams($_SERVER), true). '</p>';
 		if($e instanceof tx_rnbase_util_Exception) {
 			$additional = $e->getAdditional();
 			if($additional)
 				$htmlPart .= '<p><strong>Additional Data:</strong><br />' . strval($additional) . '</p>';
 		}
-
+	
 		tx_rnbase::load('tx_rnbase_util_TYPO3');
-		$textPart .= 'BE_USER: '.tx_rnbase_util_TYPO3::getBEUserUID()."\n";
 		$htmlPart .= '<p><strong>BE_USER:</strong> '.tx_rnbase_util_TYPO3::getBEUserUID().'</p>';
-		$textPart .= 'FE_USER: '.tx_rnbase_util_TYPO3::getFEUserUID()."\n";
 		$htmlPart .= '<p><strong>FE_USER:</strong> '.tx_rnbase_util_TYPO3::getFEUserUID().'</p>';
-
-		$mail = t3lib_div::makeInstance('t3lib_htmlmail');
-		$mail->start();
-		$mail->subject         = 'Exception on site '.$GLOBALS['TYPO3_CONF_VARS']['SYS']['sitename'];
-		$mail->from_email      = tx_rnbase_configurations::getExtensionCfgValue('rn_base', 'fromEmail');
-		$mail->from_name       = '';
-		$mail->organisation    = '';
-		$mail->priority        = 1;
-		$mail->addPlain($textPart);
-		$mail->setHTML($htmlPart);
-//		$mail->theParts['html']['content'] = $this->parse($mail->theParts['html']['content']);
-		if($lockFileFound && !$ignoreMailLock)
-			file_put_contents($lockFile, time()); // refresh lock
-		return $mail->send($mailAddr);
+	
+		return $htmlPart;
 	}
+
+	protected static function removePasswordParams(array $parameters) {
+		foreach ($parameters as $parameterName => $parameterValue) {
+			if(is_array($parameterValue))
+				$parameters[$parameterName] =  self::removePasswordParams($parameterValue);
+			elseif(preg_match('/passwor(t|d)/', $parameterName)){
+				unset($parameters[$parameterName]);
+			}
+		}
+		return $parameters;
+	}
+
 	/**
 	 * Returns currently loaded LL files
 	 * @return array
